Refactoring bank account part 1